Added bonus exercise

--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -960,6 +960,73 @@
    "source": [
     "Yay!! You have contributed the first module! You know the basics of Python programming now! Wohoo!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "63e0d7d1-64a2-42bf-9c4c-e88cefde70d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "4.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bonus! if you have spare time, and can't get enough of this Python language, feel free to try this:\n",
+    "\n",
+    "# In highschool, the writer of this excercise always had a problem (among other problems which we won't get into today...) \n",
+    "# with solving the parabolic function, which is:\n",
+    "\n",
+    "# f(x) = ax2 + bx + c. \n",
+    "# I wish I knew Python back then... let's assume I could travel back in time, could you help me figuring out\n",
+    "# the Python code, that I could define a, b, c, and then calculate the x1 and x2 that the parabola intersects with x axis (y=0)?\n",
+    "\n",
+    "# for example, for a=0.5, b=-1*(5/2), c=2, the parabola intersects X axis (when Y=0) in x=1, and x=4.\n",
+    "\n",
+    "# Hint: Google Quadratic formula\n",
+    "# Hint number 2, to do a square root - which we will need to do:\n",
+    "\n",
+    "# we will need to use an imported function -> let's not get into what it means right now, and just know that in order to do \n",
+    "# a square root, we will do something like this:\n",
+    "\n",
+    "# from math import sqrt\n",
+    "# print(sqrt(4)) <---- this will print 2\n",
+    "# print(sqrt(9)) <---- this will print 3\n",
+    "\n",
+    "# Good luck!\n",
+    "\n",
+    "\n",
+    "# SOLUTION:\n",
+    "\n",
+    "# Don't need to know what this import means for now.\n",
+    "from math import sqrt\n",
+    "\n",
+    "a = 0.5\n",
+    "b = -1*(5/2)\n",
+    "c = 2\n",
+    "x = 1\n",
+    "\n",
+    "# a*x^2 + b*x + c\n",
+    "print(a*x*x + b*x + c)\n",
+    "\n",
+    "# b^2 - 4 * a * c\n",
+    "discriminant = b*b - 4*a*c\n",
+    "\n",
+    "# (-b + square_root(b^2 - 4 * a * c)) / (2 * a)\n",
+    "x1 = (-1 * b + sqrt(discriminant)) / (2*a)\n",
+    "\n",
+    "# (-b - square_root(b^2 - 4 * a * c)) / (2 * a)\n",
+    "x2 = (-1 * b - sqrt(discriminant)) / (2*a)\n",
+    "\n",
+    "print(x1)\n",
+    "print(x2)"
+   ]
   }
  ],
  "metadata": {
@@ -978,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
