Added more bonuses

--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -962,8 +962,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac875be8-cc9c-483f-99f9-2ba6521a0ba1",
+   "metadata": {},
+   "source": [
+    "# Bonuses!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
+   "id": "2b9f05bd-da77-4530-96ba-6a1f0791ce25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bread', 'oat milk', 'cuecumbers', 'cuecumbers', 'bananas', 'pancake mix', 'pancake mix']\n",
+      "['bread', 'oat milk', 'cuecumbers', 'bananas', 'pancake mix']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bonus 1:\n",
+    "\n",
+    "# Let's say you have a grocery list\n",
+    "my_groceries = [\"bread\", \"oat milk\", \"cuecumbers\", \"cuecumbers\", \"bananas\", \"pancake mix\",\"pancake mix\"]\n",
+    "\n",
+    "print(my_groceries)\n",
+    "# Have you noticed something weird? some of this groceries appear twice, figure out how to remove them :)\n",
+    "# hint: We learned in this chapter about the append function, but in an amazing language like Python, \n",
+    "# there must be some way to remove items from the list right..? As a developer, it will happen all the time\n",
+    "# that you will need to figure things on your own, especially new functionalities, try googling how to remove an item from a list in\n",
+    "# Python, let's see what you find :)\n",
+    "\n",
+    "# Solution:\n",
+    "my_groceries.remove(\"cuecumbers\")\n",
+    "my_groceries.remove(\"pancake mix\")\n",
+    "\n",
+    "print(my_groceries)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "63e0d7d1-64a2-42bf-9c4c-e88cefde70d8",
    "metadata": {},
    "outputs": [
@@ -978,7 +1021,9 @@
     }
    ],
    "source": [
-    "# Bonus! if you have spare time, and can't get enough of this Python language, feel free to try this:\n",
+    "# Bonus 2! if you have spare time, and can't get enough of this Python language, feel free to try this:\n",
+    "\n",
+    "# I hope you're sitting down for this...... 😅\n",
     "\n",
     "# In highschool, the writer of this excercise always had a problem (among other problems which we won't get into today...) \n",
     "# with solving the parabolic function, which is:\n",
