--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -744,10 +744,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "a81e3af3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bella', 5, True, 'Amsterdam']\n"
+     ]
+    }
+   ],
    "source": [
     "# data types in the list\n",
     "\n",
@@ -757,10 +765,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "6ee9f7ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "# what is the type?\n",
     "\n",
@@ -769,10 +785,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "49e0e70a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amsterdam\n"
+     ]
+    }
+   ],
    "source": [
     "# access to an item in the list\n",
     "print(personal[3])"
@@ -780,10 +804,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4e3db80d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, 'Amsterdam']\n"
+     ]
+    }
+   ],
    "source": [
     "# range of indexes\n",
     "\n",
@@ -792,10 +824,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5ca25759",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# what is the result?\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mpersonal\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# what is the result?\n",
     "print(personal[4])"
@@ -811,10 +855,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "dcb9d8f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amsterdam\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the last item from the list\n",
     "\n",
@@ -823,10 +875,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d9dbf089",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the second last item from the list\n",
     "\n",
@@ -835,10 +895,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "f030f814",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bella', 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the first two item from the list\n",
     "\n",
@@ -847,10 +915,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "58da7388",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, 'Amsterdam']\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the last two item from the list\n",
     "\n",
@@ -859,10 +935,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "ce3a72c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, True]\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the last 3rd item but don't get the last item\n",
     "\n",
@@ -887,10 +971,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "2b9f05bd-da77-4530-96ba-6a1f0791ce25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bread', 'oat milk', 'cuecumbers', 'cuecumbers', 'bananas', 'pancake mix', 'pancake mix']\n",
+      "['bread', 'oat milk', 'cuecumbers', 'bananas', 'pancake mix']\n"
+     ]
+    }
+   ],
    "source": [
     "# Bonus 1:\n",
     "\n",
@@ -913,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "63e0d7d1-64a2-42bf-9c4c-e88cefde70d8",
    "metadata": {},
    "outputs": [
@@ -983,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a32ff0",
+   "id": "50fe65f8",
    "metadata": {},
    "outputs": [],
    "source": []
