--- a/tutorial/02_Functions.ipynb
+++ b/tutorial/02_Functions.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "af367388",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3a23fcc3",
    "metadata": {},
    "outputs": [],
@@ -75,18 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7bde494d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yesss! This is my function!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calling a function\n",
     "\n",
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a4ab6ada",
    "metadata": {},
    "outputs": [],
@@ -108,18 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aa9c1bf8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!!Hello World!!Hello World!!Hello World!!Hello World!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hello_hello()"
    ]
@@ -136,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "361f4029",
    "metadata": {},
    "outputs": [],
@@ -147,56 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "57503990",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My name is Bella and I like pink\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_story(\"Bella\", \"pink\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "84c61a7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My name is Tom and I like Blue\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_story(\"Tom\", \"Blue\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b72d28fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The highest value in euro is btc\n",
-      "The lowest value in euro is doge\n",
-      "The medium value in euro is eth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cryptocurrency_symbols(bitcoin, ethereum, dogecoin):\n",
     "        print(\"The highest value in euro is \" + bitcoin)\n",
@@ -210,20 +168,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "caa3bdee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value is 5454\n",
-      "The value is 32443.34\n",
-      "The value is 24.512,5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Default argument value\n",
     "\n",
@@ -239,20 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "350f7d87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "milk\n",
-      "eggs\n",
-      "bread\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Return values\n",
     "\n",
@@ -265,20 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "56b2312f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Return values\n",
     "\n",
@@ -292,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1bedc29c",
    "metadata": {},
    "outputs": [],
@@ -312,22 +240,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ca3c64db",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Purchased a bitcoin!\n",
-      "mybank account balance is 25488\n",
-      "Purchased a bitcoin!\n",
-      "mybank account balance is 976\n",
-      "No balance left :(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "buy_cryptocurrency(50000)"
    ]
@@ -355,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d493d4c8",
    "metadata": {},
    "outputs": [],
@@ -366,36 +282,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4734d9be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f68806d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Square: 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# function definition\n",
     "def find_square(num):\n",
@@ -410,18 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "eccf1e5a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sum:  9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# function that adds two numbers\n",
     "def add_numbers(num1, num2):\n",
@@ -446,20 +338,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "7cda2d08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Square of 1 = 1\n",
-      "Square of 2 = 4\n",
-      "Square of 3 = 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# function definition\n",
     "def get_square(num):\n",
@@ -513,9 +395,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kyccddwb",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kyccddwb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -527,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
