added Hello, World example

--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -25,6 +25,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65e4f3f7",
+   "metadata": {},
+   "source": [
+    "# Hello, world!\n",
+    "\n",
+    "The start of every coding language adventure starts with a \"Hello, world!\" output on your screen. This is done for multiple reasons:\n",
+    "\n",
+    "1. It shows that you have correctly installed all the necesary software\n",
+    "2. It shows you have a correct understanding of how to run and code in the programming language\n",
+    "3. It should be easy enough to run so it's a first win!\n",
+    "\n",
+    "Check out [this Wikipedia page](https://en.wikipedia.org/wiki/%22Hello,_World!%22_program) for more info on the trend of \"Hello, world!\" and how its unifying across almost all progamming languages!\n",
+    "\n",
+    "Below, you can execute your first piece of code that should execute a program that prints \"Hello, world!\" under it and marks the start of your journey as a programmer!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a11c6bc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, world!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c27bf2f8",
+   "metadata": {},
+   "source": [
+    "Although this looks very trivial, it requires a lot of things to be in the right place and work together. If this works, your setup is correct and you are ready to move on to bigger tasks!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94a2089f",
    "metadata": {},
    "source": [
@@ -736,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
