--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -687,13 +687,7 @@
     "# hint: We learned in this chapter about the append function, but in an amazing language like Python, \n",
     "# there must be some way to remove items from the list right..? As a developer, it will happen all the time\n",
     "# that you will need to figure things on your own, especially new functionalities, try googling how to remove an item from a list in\n",
-    "# Python, let's see what you find :)\n",
-    "\n",
-    "# Solution:\n",
-    "my_groceries.remove(\"cuecumbers\")\n",
-    "my_groceries.remove(\"pancake mix\")\n",
-    "\n",
-    "print(my_groceries)\n"
+    "# Python, let's see what you find :)\n"
    ]
   },
   {
@@ -726,33 +720,7 @@
     "# print(sqrt(4)) <---- this will print 2\n",
     "# print(sqrt(9)) <---- this will print 3\n",
     "\n",
-    "# Good luck!\n",
-    "\n",
-    "\n",
-    "# SOLUTION:\n",
-    "\n",
-    "# Don't need to know what this import means for now.\n",
-    "from math import sqrt\n",
-    "\n",
-    "a = 0.5\n",
-    "b = -1*(5/2)\n",
-    "c = 2\n",
-    "x = 1\n",
-    "\n",
-    "# a*x^2 + b*x + c\n",
-    "print(a*x*x + b*x + c)\n",
-    "\n",
-    "# b^2 - 4 * a * c\n",
-    "discriminant = b*b - 4*a*c\n",
-    "\n",
-    "# (-b + square_root(b^2 - 4 * a * c)) / (2 * a)\n",
-    "x1 = (-1 * b + sqrt(discriminant)) / (2*a)\n",
-    "\n",
-    "# (-b - square_root(b^2 - 4 * a * c)) / (2 * a)\n",
-    "x2 = (-1 * b - sqrt(discriminant)) / (2*a)\n",
-    "\n",
-    "print(x1)\n",
-    "print(x2)"
+    "# Good luck!"
    ]
   },
   {
