--- a/tutorial/01_Conditions_Loops_Data_Types.ipynb
+++ b/tutorial/01_Conditions_Loops_Data_Types.ipynb
@@ -827,19 +827,21 @@
     "Are you bored? feeling adventurous? let's try another bonus :)\n",
     "\n",
     "Try to write Python code that prints a triangle with stars, such that its size is based on a given input n.\n",
-    "for example, for n=3\n",
-    "*\n",
-    "* *\n",
+    "For example: <br> <br>\n",
     "\n",
-    "for n = 1\n",
-    "*\n",
+    "for n=3 <br>\n",
+    "\\* <br>\n",
+    "\\* * <br>\n",
     "\n",
-    "for n = 5\n",
-    "*\n",
-    "* *\n",
-    "* * *\n",
-    "* * * *\n",
-    "* * * * *\n",
+    "for n = 1 <br>\n",
+    "\\* <br>\n",
+    "\n",
+    "for n = 5 <br>\n",
+    "\\* <br>\n",
+    "\\* * <br>\n",
+    "\\* * * <br>\n",
+    "\\* * * * <br>\n",
+    "\\* * * * * <br>\n",
     "\n",
     "etc..\n",
     "\n",
@@ -853,30 +855,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15589127-77c2-4518-870c-50e2d9fcb386",
+   "cell_type": "markdown",
+   "id": "486aa1d1",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution:\n",
-    "n = 10\n",
-    "\n",
-    "for i in range(n):\n",
-    "    line_string = \"\"\n",
-    "    for j in range(i+1):\n",
-    "        line_string = line_string + \"*\" + \" \"\n",
-    "\n",
-    "    print(line_string)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c1e9570",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
