Update examples. General clean-up

--- a/tutorial/01_Conditions_Loops_Data_Types.ipynb
+++ b/tutorial/01_Conditions_Loops_Data_Types.ipynb
@@ -17,9 +17,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15caacad",
+   "id": "48917a8a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print(20 > 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d724fcb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(20 != 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b0e1534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(6 >= 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afadaf53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(20 == 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12656936",
+   "metadata": {},
    "source": [
     "Values that are **0, None or Empty** are also considered False. Any other values are True.\n",
     "\n",
@@ -34,8 +72,26 @@
    "outputs": [],
    "source": [
     "# True or false?\n",
-    "print(bool(\"Beautiful\"))\n",
-    "print(bool(61))\n",
+    "print(bool(\"Beautiful\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fae2501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bool(61))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3cb843e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(bool([\"melon\", \"kofte\", \"brownie\"]))"
    ]
   },
@@ -48,10 +104,46 @@
    "source": [
     "# True or false?\n",
     "\n",
-    "print(bool([]))\n",
-    "print(bool(\"\"))\n",
-    "print(bool(False))\n",
-    "print(bool(None))\n",
+    "print(bool([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "053ae277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bool(\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b745921a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bool(False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a61913e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bool(None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f08ab6d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(bool(0))"
    ]
   },
@@ -162,9 +254,36 @@
     "option_true = True\n",
     "option_false = False\n",
     "\n",
-    "print(option_true and option_false)\n",
-    "print(option_true or option_false)\n",
-    "print(not option_false)\n",
+    "print(option_true and option_false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c0baf69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(option_true or option_false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8da2cec5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(not option_false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92db2369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(not option_true)"
    ]
   },
@@ -788,6 +907,8 @@
     "# Include information such as: place, temperature, wind direction, wind speed etc\n",
     "# then using the dictionary print these information\n",
     "\n",
+    "# For example; city is Istanbul, temperature 33 celcius, wind speed 6 km/h\n",
+    "\n",
     "weather_info = {'city': ''}"
    ]
   },
@@ -858,6 +979,16 @@
    "cell_type": "markdown",
    "id": "486aa1d1",
    "metadata": {},
+   "source": [
+    "#### Congratulations! You learned about Booleans, If statements, For loops, While loops, Loop control statements and Dictionaries! These are the most common statements that are used in Python programming :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08dc936f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -877,7 +1008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
