Add some more flavour

--- a/tutorial/02_Functions.ipynb
+++ b/tutorial/02_Functions.ipynb
@@ -109,6 +109,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6847ccb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise: Add an empty space in between \"Hello World!!\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8b679211",
    "metadata": {},
@@ -192,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Return values\n",
+    "# Return values and discuss how this works with your team\n",
     "\n",
     "def show_groceries_list(items):\n",
     "    for item in items:\n",
@@ -208,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Return values\n",
+    "# Return values and discuss how this works with your team\n",
     "\n",
     "def how_many_letters(groceries_list):\n",
     "    for item in groceries_list:\n",
